@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-16T00:38:14Z",
+  "timestamp" : "2022-09-16T08:09:00Z",
   "count_outdated" : 1784,
   "uniques_outdated" : 542,
-  "count" : 1809,
-  "uniques" : 556,
+  "count" : 1810,
+  "uniques" : 557,
   "clones" : [
     {
       "timestamp": "2022-09-02T00:00:00Z",
@@ -84,6 +84,13 @@
     },
     {
       "timestamp": "2022-09-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
