@@ -1,5 +1,5 @@
 {
-  "count": 25,
+  "count": 26,
   "uniques": 5,
   "clones": [
     {
@@ -59,6 +59,11 @@
     },
     {
       "timestamp": "2022-09-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-16T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
