@@ -1,3 +1,11 @@
+2022-09-16T08:09:00Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3066341661
+* notice: last 14d: unq all: 5 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 542 1784 / 556 1809
+* notice: next accum: outdated-unq outdated-all / unq all: 542 1784 / 557 1810
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-16]
+
 2022-09-16T00:38:14Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3064656113
 * notice: last 14d: unq all: 5 25
